# bit

./: bit-test.cc  bit.hh  meson.build  readme.md  test.sh
.github/workflows/: ci.yaml
